fix: remove scrollbar from screen

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -40,3 +40,7 @@ h3 {
 button:hover {
   cursor: pointer;
 }
+
+::-webkit-scrollbar {
+  display: none;
+}
